[gd_scene load_steps=9 format=3 uid="uid://cw205maq37t5p"]

[ext_resource type="Script" uid="uid://fsgm1twio33l" path="res://player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://dpx34vbpcj3q4" path="res://player/player.png" id="2_rkbax"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkbax"]
size = Vector2(16, 32)

[sub_resource type="Animation" id="Animation_rkbax"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.196242),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_g1dw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_yw30f"]
resource_name = "stand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qjkh3"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yw30f"]
_data = {
&"RESET": SubResource("Animation_g1dw6"),
&"jump": SubResource("Animation_qjkh3"),
&"run": SubResource("Animation_rkbax"),
&"stand": SubResource("Animation_yw30f")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_4ntmi")

[node name="WallCollider" type="Area2D" parent="."]

[node name="CollisionShape3D" type="CollisionShape2D" parent="WallCollider"]
rotation = -3.14159

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
texture = ExtResource("2_rkbax")
hframes = 2
vframes = 3
frame = 2

[node name="FlagPoleDelayT" type="Timer" parent="."]
one_shot = true

[node name="JumpDurationT" type="Timer" parent="."]

[node name="TwirlDurationT" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CoyoteT" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="FallDeathT" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rkbax")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yw30f")
}
